[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/user-interface/pause-calculator/pause-calculator.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/user-interface/fonts/default-font.tres" type="DynamicFont" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://src/user-interface/dialogue/dialogue.gd" type="Script" id=4]
[ext_resource path="res://assets/user-interface/dialogue_background.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 192, 24 ), Vector2( 192, 28 ), Vector2( 192, 24 ) ]
}

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 128.0
margin_right = -56.0
margin_bottom = -16.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PauseCalculator" parent="." instance=ExtResource( 1 )]

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -33.0
margin_right = 101.0
margin_bottom = -3.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextIndicator" type="TextureRect" parent="."]
margin_left = 192.0
margin_top = 24.0
margin_right = 256.0
margin_bottom = 88.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="NextIndicator"]
anims/idle = SubResource( 1 )

[node name="TypeTimer" type="Timer" parent="."]

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true
